<resources>
    <string name="app_name">UCSD</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Sign up</string>
    <string name="action_forgotPwd"><u>Forgot Password?</u></string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings related to menu -->
    <string name="app_title">Give me Titleeeeeeeee</string>
    <string name="aqi_text">AQI :</string>
    <string name="hr_text">HR :</string>
</resources>
